made experience section more dynamic

--- a/index.html
+++ b/index.html
@@ -119,67 +119,94 @@
 <section id="experience" class="snap fade">
   <h2>Experience</h2>
 
-  <!-- ───── Draggable carousel wrapper ───── -->
+  <!-- draggable horizontal track -->
   <div class="exp-track" id="expTrack">
-    <!-- === CARD 1 : Insicloud === -->
+    <!-- === Insicloud === -->
     <article class="exp-card">
       <header>
         <h3>AI/ML Engineer <span>@ Insicloud</span></h3>
         <time>Jan 2025 – Present</time>
       </header>
-
-      <p>Shipped OCR & TTS micro-services (AWS Bedrock) ↓ 40 % turnaround and 90 % automated regression.</p>
-
+      <p>OCR & TTS micro-services (AWS Bedrock) ↓ 40 % turnaround and 90 % auto-regression.</p>
       <ul class="chips">
         <li>Python</li><li>AWS</li><li>Flask</li><li>Playwright</li><li>Docker</li>
       </ul>
     </article>
 
-    <!-- === CARD 2 : VCU TA === -->
-    <article class="exp-card">
-      <header>
-        <h3>Teaching Assistant <span>@ VCU CS Dept</span></h3>
-        <time>Aug 2023 – Dec 2023</time>
-      </header>
-
-      <p>Ran labs & reviews for 60+ students; improved pass rate 15 % with code-clinic sessions.</p>
-
-      <ul class="chips">
-        <li>Java</li><li>Git</li><li>Mentoring</li>
-      </ul>
-    </article>
-
-    <!-- === CARD 3 : Bank of America === -->
-    <article class="exp-card">
-      <header>
-        <h3>Software Dev Intern <span>@ Bank of America</span></h3>
-        <time>Mar 2022 – Oct 2022</time>
-      </header>
-
-      <p>Built React Native literacy app; added CI/CD (GitHub Actions) ↓ deploy time 50 %.</p>
-
-      <ul class="chips">
-        <li>React Native</li><li>Flask</li><li>SQLite</li><li>CI/CD</li>
-      </ul>
-    </article>
-
-    <!-- === CARD 4 : Capital One Capstone === -->
+    <!-- === Capital One – ML Researcher === -->
     <article class="exp-card">
       <header>
         <h3>ML Researcher <span>@ Capital One</span></h3>
         <time>Sep 2022 – Apr 2023</time>
       </header>
-
-      <p>Created real-time log pipeline (10 k events/s) ↑ incident visibility 40 %.</p>
-
+      <p>Real-time log pipeline (10 K ev/s) ↑ 40 % incident visibility; synthetic threats ↓ 25 % FPs.</p>
       <ul class="chips">
         <li>AWS Lambda</li><li>Kinesis</li><li>SQL</li><li>NLP</li>
       </ul>
     </article>
 
-    <!-- add more cards as needed -->
+    <!-- === Teaching Assistant === -->
+    <article class="exp-card">
+      <header>
+        <h3>Teaching Assistant <span>@ VCU CS Dept</span></h3>
+        <time>Aug 2023 – Dec 2023</time>
+      </header>
+      <p>Led Java labs & code clinics; improved pass rate 15 %.</p>
+      <ul class="chips">
+        <li>Java</li><li>Mentoring</li><li>Git</li>
+      </ul>
+    </article>
+
+    <!-- === Bank of America === -->
+    <article class="exp-card">
+      <header>
+        <h3>Software Dev Intern <span>@ Bank of America</span></h3>
+        <time>Mar 2022 – Oct 2022</time>
+      </header>
+      <p>React Native literacy app; CI/CD (GitHub Actions) ↓ 50 % deploy time.</p>
+      <ul class="chips">
+        <li>React Native</li><li>Flask</li><li>SQLite</li><li>CI/CD</li>
+      </ul>
+    </article>
+
+    <!-- === Capital One Capstone === -->
+    <article class="exp-card">
+      <header>
+        <h3>Capstone Project <span>@ Capital One</span></h3>
+        <time>Aug 2022 – Apr 2023</time>
+      </header>
+      <p>Vector-based log processing with Datadog; delivered production-ready incident analysis.</p>
+      <ul class="chips">
+        <li>Vector</li><li>AWS</li><li>Python</li>
+      </ul>
+    </article>
+
+    <!-- === VCU Social-Good Web Dev === -->
+    <article class="exp-card">
+      <header>
+        <h3>Web Developer <span>@ VCU Social Good</span></h3>
+        <time>Aug 2022 – Dec 2022</time>
+      </header>
+      <p>JavaScript site for safe night transport; added real-time bus tracking & alerts.</p>
+      <ul class="chips">
+        <li>JavaScript</li><li>REST</li><li>UI/UX</li>
+      </ul>
+    </article>
+
+    <!-- === Peer Tutor === -->
+    <article class="exp-card">
+      <header>
+        <h3>Peer Tutor <span>@ VCU CS Dept</span></h3>
+        <time>Aug 2021 – Dec 2021</time>
+      </header>
+      <p>Taught introductory Java; ran weekly support sessions, boosting grades & confidence.</p>
+      <ul class="chips">
+        <li>Java</li><li>Teaching</li><li>Debugging</li>
+      </ul>
+    </article>
   </div>
 </section>
+
 
 
   <!-- ===== PROJECTS ===== -->
