added chips logos for insicloud

--- a/index.html
+++ b/index.html
@@ -123,15 +123,23 @@
   <div class="exp-track" id="expTrack">
     <!-- === Insicloud === -->
     <article class="exp-card">
-      <header>
-        <h3>AI/ML Engineer <span>@ Insicloud</span></h3>
-        <time>Jan 2025 – Present</time>
-      </header>
-      <p>OCR & TTS micro-services (AWS Bedrock) ↓ 40 % turnaround and 90 % auto-regression.</p>
-      <ul class="chips">
-        <li>Python</li><li>AWS</li><li>Flask</li><li>Playwright</li><li>Docker</li>
-      </ul>
-    </article>
+  <header>
+    <h3>AI/ML Engineer <span>@ Insicloud</span></h3>
+    <time>Jan 2025 – Present</time>
+  </header>
+  <p>OCR & TTS micro-services (AWS Bedrock) ↓ 40 % turnaround.</p>
+
+  <ul class="chips">
+  <li><img src="assets/skills/python-original.svg"  alt="">Python</li>
+  <li><img src="assets/skills/bedrock.svg"          alt="">Bedrock</li>
+  <li><img src="assets/skills/flask.png"            alt="">Flask</li>
+  <li><img src="assets/skills/react-original.svg"            alt="">React</li>
+  <li><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"           alt="">Ollama</li>
+  <li><img src="assets/skills/langchain.png"        alt="">LangChain</li>
+  <li><img src="assets/skills/docker-original.svg"  alt="">Docker</li>
+</ul>
+</article>
+
 
     <!-- === Capital One – ML Researcher === -->
     <article class="exp-card">
