added chips logos for insicloud

--- a/index.html
+++ b/index.html
@@ -149,8 +149,14 @@
       </header>
       <p>Real-time log pipeline (10 K ev/s) ↑ 40 % incident visibility; synthetic threats ↓ 25 % FPs.</p>
       <ul class="chips">
-        <li>AWS Lambda</li><li>Kinesis</li><li>SQL</li><li>NLP</li>
-      </ul>
+  <li><img src="assets/skills/aws-lambda.svg"     alt="">AWS Lambda</li>
+  <li><img src="assets/skills/aws-kinesis.svg"    alt="">Kinesis</li>
+  <li><img src="assets/skills/sql.svg"            alt="">SQL</li>
+  <li><img src="assets/skills/nlp.svg"            alt="">NLP</li>
+  <li><img src="assets/skills/datadog.svg"        alt="">Vector</li>
+  <li><img src="assets/skills/raspberry-pi.svg"   alt="">Raspberry Pi</li>
+</ul>
+
     </article>
 
     <!-- === Teaching Assistant === -->
@@ -161,8 +167,11 @@
       </header>
       <p>Led Java labs & code clinics; improved pass rate 15 %.</p>
       <ul class="chips">
-        <li>Java</li><li>Mentoring</li><li>Git</li>
-      </ul>
+  <li><img src="assets/skills/java-original.svg" alt="">Java</li>
+  <li><img src="assets/skills/mentoring.svg"      alt="">Mentoring</li>
+  <li><img src="assets/skills/git-original.svg"   alt="">Git</li>
+</ul>
+
     </article>
 
     <!-- === Bank of America === -->
@@ -173,20 +182,13 @@
       </header>
       <p>React Native literacy app; CI/CD (GitHub Actions) ↓ 50 % deploy time.</p>
       <ul class="chips">
-        <li>React Native</li><li>Flask</li><li>SQLite</li><li>CI/CD</li>
-      </ul>
-    </article>
-
-    <!-- === Capital One Capstone === -->
-    <article class="exp-card">
-      <header>
-        <h3>Capstone Project <span>@ Capital One</span></h3>
-        <time>Aug 2022 – Apr 2023</time>
-      </header>
-      <p>Vector-based log processing with Datadog; delivered production-ready incident analysis.</p>
-      <ul class="chips">
-        <li>Vector</li><li>AWS</li><li>Python</li>
-      </ul>
+  <li><img src="assets/skills/react.svg"          alt="">React Native</li>
+  <li><img src="assets/skills/flask.svg"          alt="">Flask</li>
+  <li><img src="assets/skills/sqlite-original.svg"alt="">SQLite</li>
+  <li><img src="assets/skills/github-original.svg"alt="">CI/CD</li>
+  <li><img src="assets/skills/figma.svg"          alt="">Figma</li>
+  <li><img src="assets/skills/usertest.svg"       alt="">User Testing</li>
+</ul>
     </article>
 
     <!-- === VCU Social-Good Web Dev === -->
@@ -197,8 +199,12 @@
       </header>
       <p>JavaScript site for safe night transport; added real-time bus tracking & alerts.</p>
       <ul class="chips">
-        <li>JavaScript</li><li>REST</li><li>UI/UX</li>
-      </ul>
+  <li><img src="assets/skills/javascript-original.svg" alt="">JavaScript</li>
+  <li><img src="assets/skills/react.svg"               alt="">React</li>
+  <li><img src="assets/skills/flask.svg"               alt="">Flask</li>
+  <li><img src="assets/skills/rest.svg"                alt="">REST API</li>
+  <li><img src="assets/skills/uiux.svg"                alt="">UI/UX</li>
+</ul>
     </article>
 
     <!-- === Peer Tutor === -->
@@ -209,8 +215,11 @@
       </header>
       <p>Taught introductory Java; ran weekly support sessions, boosting grades & confidence.</p>
       <ul class="chips">
-        <li>Java</li><li>Teaching</li><li>Debugging</li>
-      </ul>
+  <li><img src="assets/skills/java-original.svg" alt="">Java</li>
+  <li><img src="assets/skills/teaching.svg"      alt="">Teaching</li>
+  <li><img src="assets/skills/debug.svg"         alt="">Debugging</li>
+</ul>
+
     </article>
   </div>
 </section>
