added chips logos for other works

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     <h3>AI/ML Engineer <span>@ Insicloud</span></h3>
     <time>Jan 2025 – Present</time>
   </header>
-  <p>OCR & TTS micro-services (AWS Bedrock) ↓ 40 % turnaround.</p>
+  <p>OCR & TTS micro-services (AWS Bedrock) down 40 % turnaround.</p>
 
   <ul class="chips">
   <li><img src="assets/skills/python-original.svg"  alt="">Python</li>
-  <li><img src="assets/skills/bedrock.svg"          alt="">Bedrock</li>
+  <li><img src="assets/skills/amazon-bedrock-logo-grayscale-caee.png"          alt="">Bedrock</li>
   <li><img src="assets/skills/flask.png"            alt="">Flask</li>
   <li><img src="assets/skills/react-original.svg"            alt="">React</li>
   <li><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"           alt="">Ollama</li>
@@ -147,14 +147,14 @@
         <h3>ML Researcher <span>@ Capital One</span></h3>
         <time>Sep 2022 – Apr 2023</time>
       </header>
-      <p>Real-time log pipeline (10 K ev/s) ↑ 40 % incident visibility; synthetic threats ↓ 25 % FPs.</p>
+      <p>Real-time log pipeline (10 K ev/s) up 40 % incident visibility; synthetic threats down 25 % FPs.</p>
       <ul class="chips">
-  <li><img src="assets/skills/aws-lambda.svg"     alt="">AWS Lambda</li>
-  <li><img src="assets/skills/aws-kinesis.svg"    alt="">Kinesis</li>
-  <li><img src="assets/skills/sql.svg"            alt="">SQL</li>
-  <li><img src="assets/skills/nlp.svg"            alt="">NLP</li>
-  <li><img src="assets/skills/datadog.svg"        alt="">Vector</li>
-  <li><img src="assets/skills/raspberry-pi.svg"   alt="">Raspberry Pi</li>
+  <li><img src="assets/skills/aws-lambda-1.svg"     alt="">AWS Lambda</li>
+  <li><img src="assets/skills/aws-kinesis-logo-png_seeklogo-306153.png"    alt="">Kinesis</li>
+  <li><img src="assets/skills/mysql-original.svg"            alt="">SQL</li>
+  <li><img src="assets/skills/nlp-natural-language-processing.png"            alt="">NLP</li>
+  <li><img src="assets/skills/datadog-1.svg"        alt="">Vector</li>
+  <li><img src="assets/skills/raspberry-pi-logo.svg"   alt="">Raspberry Pi</li>
 </ul>
 
     </article>
@@ -180,10 +180,10 @@
         <h3>Software Dev Intern <span>@ Bank of America</span></h3>
         <time>Mar 2022 – Oct 2022</time>
       </header>
-      <p>React Native literacy app; CI/CD (GitHub Actions) ↓ 50 % deploy time.</p>
+      <p>React Native literacy app; CI/CD (GitHub Actions) down 50 % deploy time.</p>
       <ul class="chips">
-  <li><img src="assets/skills/react.svg"          alt="">React Native</li>
-  <li><img src="assets/skills/flask.svg"          alt="">Flask</li>
+  <li><img src="assets/skills/react-original.svg"          alt="">React Native</li>
+  <li><img src="assets/skills/flask.png"          alt="">Flask</li>
   <li><img src="assets/skills/sqlite-original.svg"alt="">SQLite</li>
   <li><img src="assets/skills/github-original.svg"alt="">CI/CD</li>
   <li><img src="assets/skills/figma.svg"          alt="">Figma</li>
@@ -200,8 +200,8 @@
       <p>JavaScript site for safe night transport; added real-time bus tracking & alerts.</p>
       <ul class="chips">
   <li><img src="assets/skills/javascript-original.svg" alt="">JavaScript</li>
-  <li><img src="assets/skills/react.svg"               alt="">React</li>
-  <li><img src="assets/skills/flask.svg"               alt="">Flask</li>
+  <li><img src="assets/skills/react-original.svg"               alt="">React</li>
+  <li><img src="assets/skills/flask.png"               alt="">Flask</li>
   <li><img src="assets/skills/rest.svg"                alt="">REST API</li>
   <li><img src="assets/skills/uiux.svg"                alt="">UI/UX</li>
 </ul>
