--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
   <!-- ===== SKILLS ===== -->
 <section id="skills" class="snap fade">
   <h2>Skills&nbsp;&amp;&nbsp;Tools</h2>
+<p class="hover-note">Hover a logo to see my proficiency ↗</p>
 
   <!-- Languages -->
   <div class="skill-category">
     <h3>Languages</h3>
     <div class="skill-grid">
       <div class="skill-logo" data-skill="85"><img src="assets/skills/python-original.svg"       alt="Python"><span class="skill-tooltip">Python&nbsp;85%</span></div>
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/java-original.svg"         alt="Java"><span class="skill-tooltip">Java&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="80"><img src="assets/skills/javascript-original.svg"   alt="JavaScript"><span class="skill-tooltip">JavaScript&nbsp;80%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/c-original.svg"            alt="C"><span class="skill-tooltip">C&nbsp;65%</span></div>
-      <div class="skill-logo" data-skill="60"><img src="assets/skills/csharp-original.svg"       alt="C#"><span class="skill-tooltip">C#&nbsp;60%</span></div>
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/sqlite-original.svg"       alt="SQL"><span class="skill-tooltip">SQL&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/java-original.svg"         alt="Java"><span class="skill-tooltip">Java&nbsp;85%</span></div>
+      <div class="skill-logo" data-skill="80"><img src="assets/skills/javascript-original.svg"   alt="JavaScript"><span class="skill-tooltip">JavaScript&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/c-original.svg"            alt="C"><span class="skill-tooltip">C&nbsp;60%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/csharp-original.svg"       alt="C#"><span class="skill-tooltip">C#&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/sqlite-original.svg"       alt="SQL"><span class="skill-tooltip">SQL&nbsp;80%</span></div>
     </div>
   </div>
 
@@ -64,15 +65,15 @@
   <div class="skill-category">
     <h3>Frameworks&nbsp;&amp;&nbsp;Tools</h3>
     <div class="skill-grid">
-      <div class="skill-logo" data-skill="80"><img src="assets/skills/react-original.svg"        alt="React"><span class="skill-tooltip">React&nbsp;80%</span></div>
-      <div class="skill-logo" data-skill="78"><img src="assets/skills/react-original.svg"        alt="React Native"><span class="skill-tooltip">React&nbsp;Native&nbsp;78%</span></div>
+      <div class="skill-logo" data-skill="80"><img src="assets/skills/react-original.svg"        alt="React"><span class="skill-tooltip">React&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="78"><img src="assets/skills/react-original.svg"        alt="React Native"><span class="skill-tooltip">React&nbsp;Native&nbsp;70%</span></div>
       <div class="skill-logo" data-skill="55"><img src="assets/skills/angular-framework-logo-red-white-shield-icon-modern-design-1.png"               alt="Angular"><span class="skill-tooltip">Angular&nbsp;55%</span></div>
       <div class="skill-logo" data-skill="78"><img src="assets/skills/flask.png"        alt="Flask"><span class="skill-tooltip">Flask&nbsp;78%</span></div>
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/docker-original.svg"       alt="Docker"><span class="skill-tooltip">Docker&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/unity-original.svg"        alt="Unity"><span class="skill-tooltip">Unity&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/docker-original.svg"       alt="Docker"><span class="skill-tooltip">Docker&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/unity-original.svg"        alt="Unity"><span class="skill-tooltip">Unity&nbsp;45%</span></div>
       <div class="skill-logo" data-skill="85"><img src="assets/skills/git-original.svg"          alt="Git"><span class="skill-tooltip">Git&nbsp;85%</span></div>
-      <div class="skill-logo" data-skill="70"><img src="assets/skills/github-original.svg"       alt="GitHub Actions"><span class="skill-tooltip">GitHub&nbsp;Actions&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="55"><img src="assets/skills/grpc-logo-png_seeklogo-430953.png"                  alt="gRPC"><span class="skill-tooltip">gRPC&nbsp;55%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/github-original.svg"       alt="GitHub Actions"><span class="skill-tooltip">GitHub&nbsp;Actions&nbsp;85%</span></div>
+      <div class="skill-logo" data-skill="55"><img src="assets/skills/grpc-logo-png_seeklogo-430953.png"                  alt="gRPC"><span class="skill-tooltip">gRPC&nbsp;45%</span></div>
     </div>
   </div>
 
@@ -81,7 +82,7 @@
     <h3>Cloud&nbsp;&amp;&nbsp;Databases</h3>
     <div class="skill-grid">
       <div class="skill-logo" data-skill="75"><img src="assets/skills/Amazon-Web-Services-AWS-Logo.png"             alt="AWS"><span class="skill-tooltip">AWS&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/firebase-plain.svg"        alt="Firebase"><span class="skill-tooltip">Firebase&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/firebase-plain.svg"        alt="Firebase"><span class="skill-tooltip">Firebase&nbsp;55%</span></div>
       <div class="skill-logo" data-skill="80"><img src="assets/skills/mysql-original.svg"        alt="MySQL"><span class="skill-tooltip">MySQL&nbsp;80%</span></div>
       <div class="skill-logo" data-skill="70"><img src="assets/skills/postgresql-original.svg"   alt="PostgreSQL"><span class="skill-tooltip">PostgreSQL&nbsp;70%</span></div>
       <div class="skill-logo" data-skill="70"><img src="assets/skills/sqlite-original.svg"       alt="SQLite"><span class="skill-tooltip">SQLite&nbsp;70%</span></div>
@@ -93,12 +94,12 @@
     <h3>AI&nbsp;/&nbsp;ML</h3>
     <div class="skill-grid">
       <div class="skill-logo" data-skill="70"><img src="assets/skills/langchain.png"             alt="LangChain"><span class="skill-tooltip">LangChain&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"                alt="Ollama"><span class="skill-tooltip">Ollama&nbsp;65%</span></div>
-      <div class="skill-logo" data-skill="60"><img src="assets/skills/tensorflow-original.svg"   alt="TensorFlow"><span class="skill-tooltip">TensorFlow&nbsp;60%</span></div>
-      <div class="skill-logo" data-skill="70"><img src="assets/skills/scikitlearn-original.svg"  alt="scikit-learn"><span class="skill-tooltip">scikit-learn&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="60"><img src="assets/skills/FAISS.png"                 alt="FAISS"><span class="skill-tooltip">FAISS&nbsp;60%</span></div>
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/huggingface-color.png"           alt="HuggingFace"><span class="skill-tooltip">HuggingFace&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/Sagemaker.png"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"                alt="Ollama"><span class="skill-tooltip">Ollama&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/tensorflow-original.svg"   alt="TensorFlow"><span class="skill-tooltip">TensorFlow&nbsp;72%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/scikitlearn-original.svg"  alt="scikit-learn"><span class="skill-tooltip">scikit-learn&nbsp;66%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/FAISS.png"                 alt="FAISS"><span class="skill-tooltip">FAISS&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/huggingface-color.png"           alt="HuggingFace"><span class="skill-tooltip">HuggingFace&nbsp;40%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/Sagemaker.png"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;70%</span></div>
     </div>
   </div>
 
@@ -106,10 +107,10 @@
   <div class="skill-category">
     <h3>Methods</h3>
     <div class="skill-grid">
-      <div class="skill-logo" data-skill="90"><i class="fas fa-users"></i><span class="skill-tooltip">Agile&nbsp;90%</span></div>
-      <div class="skill-logo" data-skill="70"><i class="fas fa-vial"></i><span class="skill-tooltip">TDD&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="75"><i class="fas fa-user-check"></i><span class="skill-tooltip">User-Centred&nbsp;Design&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="80"><i class="fas fa-sync-alt"></i><span class="skill-tooltip">CI/CD&nbsp;80%</span></div>
+      <div class="skill-logo" data-skill="90"><i class="fas fa-users"></i><span class="skill-tooltip">Agile&nbsp;80%</span></div>
+      <div class="skill-logo" data-skill="70"><i class="fas fa-vial"></i><span class="skill-tooltip">TDD&nbsp;68%</span></div>
+      <div class="skill-logo" data-skill="75"><i class="fas fa-user-check"></i><span class="skill-tooltip">User-Centred&nbsp;Design&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="80"><i class="fas fa-sync-alt"></i><span class="skill-tooltip">CI/CD&nbsp;85%</span></div>
     </div>
   </div>
 </section>
