animated socail circle

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
       <div class="profile-image-container">
         <img src="assets/profile_circle.png" alt="Aneesh Mussim" class="profile-img">
         <div class="social-circle">
-          <a href="https://github.com/saianeesh01" target="_blank" class="icon icon1"><i class="fab fa-github"></i></a>
-          <a href="https://linkedin.com/in/aneesh-mussim" target="_blank" class="icon icon2"><i class="fab fa-linkedin"></i></a>
-          <a href="mailto:saianeesh01@gmail.com" class="icon icon3"><i class="fas fa-envelope"></i></a>
-          <a href="assets/Aneesh_Mussim_Resume.pdf" class="icon icon4" download title="Download Resume"><i class="fas fa-file-alt"></i></a>
-        </div>
+  <a href="https://github.com/saianeesh01"  target="_blank" class="icon" style="--i:0"><i class="fab fa-github"></i></a>
+  <a href="https://linkedin.com/in/aneesh-mussim" target="_blank" class="icon" style="--i:1"><i class="fab fa-linkedin"></i></a>
+  <a href="mailto:saianeesh01@gmail.com"   class="icon" style="--i:2"><i class="fas fa-envelope"></i></a>
+  <a href="assets/Aneesh_Mussim_Resume.pdf" class="icon" style="--i:3" download title="Download Resume"><i class="fas fa-file-alt"></i></a>
+</div>
+
       </div>
       <span class="name-part white">Mussim</span>
     </div>
