--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <span class="name-part white">Mussim</span>
     </div>
     <p class="tagline">AI/ML &nbsp;•&nbsp; Full-Stack &nbsp;•&nbsp; Cloud-Native</p>
+    <p class="scroll-hint">↓ Scroll to explore more</p>
+
   </header>
 
   <!-- ===== ABOUT ===== -->
