--- a/chatbot-frontend/index.html
+++ b/chatbot-frontend/index.html
@@ -325,6 +325,13 @@
       </div>
     </div>
   </section>
+<div id="chatbox-container">
+  <div id="chatbox">
+    <div id="chatlog"></div>
+    <input type="text" id="userInput" placeholder="Ask me something..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</div>
 
 <script>
 document.getElementById('expTrack').addEventListener('mousedown', e=>{
@@ -333,6 +340,32 @@ document.getElementById('expTrack').addEventListener('mousedown', e=>{
   function stop(){window.removeEventListener('mousemove',move);window.removeEventListener('mouseup',stop);}
   window.addEventListener('mousemove',move); window.addEventListener('mouseup',stop);
 });
+</script>
+<section id="chatbot">
+  <h2>Ask My AI Chatbot</h2>
+  <div id="chat-box"></div>
+  <input type="text" id="user-input" placeholder="Ask me anything..." />
+  <button onclick="sendMessage()">Send</button>
+</section>
+
+<script>
+async function sendMessage() {
+  const input = document.getElementById('user-input');
+  const message = input.value;
+  if (!message) return;
+
+  const response = await fetch('https://aneesh-chatbot-backend.onrender.com/chat', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ message })
+  });
+
+  const data = await response.json();
+  const chatBox = document.getElementById('chat-box');
+  chatBox.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
+  chatBox.innerHTML += `<p><strong>Bot:</strong> ${data.response}</p>`;
+  input.value = '';
+}
 </script>
 
   <footer>
