--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ async function sendMessage() {
   const message = input.value;
   if (!message) return;
 
-  const response = await fetch('https://aneesh-chatbot-backend.onrender.com/chat', {
+  const response = await fetch('https://aneesh-chatbot-backend.onrender.com/api/chat', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ message })
