--- a/index.html
+++ b/index.html
@@ -343,10 +343,17 @@ document.getElementById('expTrack').addEventListener('mousedown', e=>{
 </section>
 
 <script>
+document.getElementById("chatbot-toggle").addEventListener("click", () => {
+  document.getElementById("chatbot-modal").classList.toggle("hidden");
+});
+
 async function sendMessage() {
   const input = document.getElementById('user-input');
-  const message = input.value;
+  const message = input.value.trim();
   if (!message) return;
+
+  const chatBox = document.getElementById('chat-box');
+  chatBox.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
 
   const response = await fetch('https://aneesh-chatbot-backend.onrender.com/api/chat', {
     method: 'POST',
@@ -355,12 +362,22 @@ async function sendMessage() {
   });
 
   const data = await response.json();
-  const chatBox = document.getElementById('chat-box');
-  chatBox.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
   chatBox.innerHTML += `<p><strong>Bot:</strong> ${data.response}</p>`;
+  chatBox.scrollTop = chatBox.scrollHeight;
   input.value = '';
 }
 </script>
+
+<!-- Floating Chat Button -->
+<div id="chatbot-toggle" class="floating-chat-icon">💬</div>
+
+<!-- Chat Modal -->
+<div id="chatbot-modal" class="chat-modal hidden">
+  <div class="chat-header">Ask My AI Chatbot</div>
+  <div id="chat-box" class="chat-body"></div>
+  <input type="text" id="user-input" placeholder="Ask me anything..." />
+  <button onclick="sendMessage()">Send</button>
+</div>
 
   <footer>
     © 2025&nbsp;Aneesh&nbsp;Mussim
