updated mobile format

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <img src="assets/profile_circle.png" alt="Aneesh Mussim" class="profile-img">
         
         <div class="social-circle">
-          <a href="https://github.com/saianeesh01" target="_blank" class="icon icon1"><i class="fab fa-github"></i></a>
-          <a href="https://linkedin.com/in/aneesh-mussim" target="_blank" class="icon icon2"><i class="fab fa-linkedin"></i></a>
-          <a href="mailto:saianeesh01@gmail.com" class="icon icon3"><i class="fas fa-envelope"></i></a>
-          <a href="assets/Aneesh_Mussim_AI_Engineer_Resume.pdf" class="icon icon4" download title="Download Resume"><i class="fas fa-file-alt"></i></a>
+          <a href="https://github.com/saianeesh01" target="_blank" rel="noopener noreferrer" class="icon icon1" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+          <a href="https://linkedin.com/in/aneesh-mussim" target="_blank" rel="noopener noreferrer" class="icon icon2" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:saianeesh01@gmail.com" class="icon icon3" aria-label="Email Contact"><i class="fas fa-envelope"></i></a>
+          <a href="assets/Aneesh_Mussim(resume_2025).pdf" class="icon icon4" download title="Download Resume" aria-label="Download Resume"><i class="fas fa-file-alt"></i></a>
         </div>
       </div>
       
