added additional skills

--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
       <div class="skill-logo" data-skill="65"><img src="assets/skills/Sagemaker.png"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;70%</span></div>
     </div>
   </div>
+<!-- DevOps & Scripting -->
+<div class="skill-category">
+  <h3>DevOps & Scripting</h3>
+  <div class="skill-grid">
+    <div class="skill-logo" data-skill="72">
+      <img src="assets/skills/powershell.svg" alt="PowerShell" />
+      <span class="skill-tooltip">PowerShell&nbsp;72%</span>
+    </div>
+    <div class="skill-logo" data-skill="65">
+      <img src="assets/skills/ansible.jpg" alt="Ansible" />
+      <span class="skill-tooltip">Ansible&nbsp;65%</span>
+    </div>
+    <div class="skill-logo" data-skill="68">
+      <img src="assets/skills/ASPNET.png" alt="ASP.NET MVC" />
+      <span class="skill-tooltip">ASP.NET&nbsp;MVC&nbsp;68%</span>
+    </div>
+  </div>
+</div>
 
   <!-- Methods -->
   <div class="skill-category">
