--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aneesh Mussim | Portfolio</title>
 
   <!-- Fonts & Icons -->
@@ -11,6 +12,8 @@
 
   <!-- Styles & Script -->
   <link rel="stylesheet" href="style.css">
+  <!-- anime.js for motion -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script defer src="main.js"></script>
 </head>
 <body>
