--- a/index.html
+++ b/index.html
@@ -24,17 +24,10 @@
     <div class="hero-inner">
       <span class="name-part red">Aneesh</span>
       <span class="name-part white">Mussim</span>
-      <svg class="hero-stroke-svg" viewBox="0 0 1000 160" aria-hidden="true">
-        <defs>
-          <mask id="hero-stroke-mask">
-            <rect id="hero-stroke-mask-rect" x="0" y="0" width="0" height="160" fill="#fff"></rect>
-          </mask>
-        </defs>
-        <text x="500" y="90" text-anchor="middle" class="hero-stroke-text" mask="url(#hero-stroke-mask)">Aneesh Mussim</text>
-      </svg>
       <div class="profile-image-container">
         <img src="assets/profile_circle.png" alt="Aneesh Mussim" class="profile-img">
         
+        <div class="jarvis-ring" aria-hidden="true"></div>
         <div class="social-circle">
           <a href="https://github.com/saianeesh01" target="_blank" rel="noopener noreferrer" class="icon icon1" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
           <a href="https://linkedin.com/in/aneesh-mussim" target="_blank" rel="noopener noreferrer" class="icon icon2" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
